<resources>
    <string name="app_name">瑜伽学院</string>
    <!--<string name="￥">￥%s</string>-->
    <string name="pwd">输入密码</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="start_button">开始</string>
    <string name="stop_button">停止</string>
    <string name="pause_button">暂停</string>
    <string name="replay_button">重播</string>
    <string name="mute_label">静音:</string>
    <string name="volume_label">音量</string>
    <string name="brightness_label">亮度</string>
    <string name="scale_model">缩放模式</string>
    <string name="aspect_fit">原比例填充(fit)</string>
    <string name="aspect_fill">裁剪占满全屏(fill)</string>
    <string name="player_log">播放器日志：</string>
    <string name="log_start_get_data">准备请求码流</string>
    <string name="log_strart_play">开始请求播放</string>
    <string name="toast_prepare_success">准备成功</string>
    <string name="log_prepare_success">准备成功</string>
    <string name="log_player_create_success">播放创建成功</string>
    <string name="log_open_url_success">url请求成功</string>
    <string name="log_request_stream_success">请求流成功</string>
    <string name="log_start_open_stream">开始传输码流</string>
    <string name="log_first_frame_played">第一帧播放完成</string>
    <string name="toast_fail_msg">失败！！！！原因：</string>
    <string name="log_seek_completed">seek结束</string>
    <string name="log_play_stopped">播放停止</string>
    <string name="video_width">视频宽：</string>
    <string name="video_height">视频高：</string>
    <string name="resume_button">继续</string>
    <string name="log_seek_start">seek开始</string>
    <string name="net_change_to_4g">网络切换为4G</string>
    <string name="net_change_to_wifi">网络切换为WIFI</string>
    <string name="net_disconnect">网络已断开</string>
    <string name="net_change_to_continue">是否继续播放？</string>
    <string name="ok">是</string>
    <string name="auto_play">自动播放:</string>
    <string name="change_quality_label">切换清晰度：</string>

    <string name="no">否</string>
    <string name="snapshot">截图</string>
    <string name="rotation">旋转角度</string>
    <string name="roate_0">0°</string>
    <string name="roate_90">90°</string>
    <string name="roate_180">180°</string>
    <string name="roate_270">270°</string>
    <string name="mirror">镜像</string>
    <string name="mirror_none">无镜像</string>
    <string name="mirror_h">水平镜像</string>
    <string name="mirror_v">垂直镜像</string>
    <string name="valid_date">360天内随时看</string>
    <string name="replay">重播</string>
    <string name="video_loading_faild">视频加载失败</string>
    <string name="click_to_restart">点击重试</string>
    <string name="home_experience_recommend_class">推荐课程</string>
    <string name="home_experience_recommend_lesson_info">课程信息</string>
    <string name="home_experience_recommend_lesson_pay_way">支付方式</string>
    <string name="home_experience_recommend_lesson_appointment">立即预约</string>
    <string name="home_experience_recommend_class_introduciton">课程介绍</string>
    <string name="home_experience_recommend_lesson_appointment1">课程预约</string>
    <string name="home_experience_recommend_appointment">预约</string>
    <string name="user_upload_hp">上传头像</string>
    <string name="user_register_name">姓名</string>
    <string name="user_sex">性别</string>
    <string name="user_address">地区</string>
    <string name="user_select_address">选择区域</string>
    <string name="user_register_submit1">进入瑜伽学院</string>
    <string name="user_login_mobile">手机号码</string>
    <string name="bind_user_phone_num">绑定手机号</string>
    <string name="user_login_pwd">登录密码</string>
    <string name="user_login_for_pwd">使用手机号码登录</string>
    <string name="user_login_forget_pwd">忘记密码</string>
    <string name="user_login_submit">登 录</string>
    <string name="user_login_register">注 册</string>
    <string name="user_wx_login">微信登陆</string>
    <string name="user_register">注册</string>
    <string name="user_register_input_pwd1">请输入6-16位数字或字母组合</string>
    <string name="user_register_input_pwd2">请输入与上面相同的密码</string>
    <string name="user_sms_num">验证码</string>
    <string name="user_get_smsnum">获取验证码</string>
    <string name="user_setting">设置</string>
    <string name="user_ticket">优惠券</string>
    <string name="user_wallet">钱包</string>
    <string name="user_course_bespeak_invalid">已取消课程 - 预约无效</string>
    <string name="user_course_bespeak">待核销课程 - 已预约</string>
    <string name="user_course">我的课程</string>
    <string name="user_card">VIP权益卡</string>
    <string name="user_vip_card">我的会员卡</string>


    <string name="error_network">网络出错，请重试</string>
    <string name="no_data">返回数据为空</string>

    <string name="lesson_attention">注意事项:\n1.课程详情可在&lt;我的中心-我的订单&gt;处查看。\n2.请于课程前10分钟到瑜伽馆前台签到。</string>
    <string name="lesson_appointment_successful">课程预约成功</string>
    <string name="lesson_appointment_successful_return">返回课程列表</string>
    <string name="home_course_introduce">课程介绍和说明：i好看不放假啊空间发卡等级\n 几年时间发的就是考虑对方</string>

    <string name="user_appointment_course_detail">1.订单详情可在 《我的预约》 查看\n2.请于课前10分钟到瑜伽馆前台确认签到\n3.取消预约时间限制由瑜伽馆确认\n4.若瑜伽馆取消课程，将会及时通知您，\n5.同一时间段不能预约两节课。</string>
    <string name="dialog_tips">提示</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_sure">确定</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="follow_content">1、20:00以后的预约将会延迟到第二天上午9:00开始进行确认，请谅解;\n2、请于课程前10分钟到瑜伽馆前台进行签到;\n3、取消预约的时间限制由瑜伽馆决定;\n4、自选时间的课程，在开课开始后不能取消;\n5、同一时间段不能预约两节课程。</string>


</resources>
