<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/view_comm_title" />

    <LinearLayout
        android:id="@+id/ll_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/lesson_appointment_successful"
                android:textColor="@color/theme_1"
                android:textSize="16sp" />


        </RelativeLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/home_experience_recommend_item_view"></View>


        <TextView
            android:id="@+id/tv_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="订单编号:"
            android:textColor="@color/home_experience_font_recommend_class"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_lesson_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:text="课程名称:"
            android:textColor="@color/home_experience_font_recommend_class"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_classroom_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:text="课程教室:"
            android:textColor="@color/home_experience_font_recommend_class"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_lesson_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:text="课程老师:"
            android:textColor="@color/home_experience_font_recommend_class"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_lesson_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:text="课程时间:"
            android:textColor="@color/home_experience_font_recommend_class"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_lesson_attention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/lesson_attention"
            android:textColor="@color/home_experience_font_recommend_class"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tv_lesson_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:text="课程地址:"
            android:textColor="@color/home_experience_font_recommend_class"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_lesson_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:text="联系电话:"
            android:textColor="@color/home_experience_font_recommend_class"
            android:textSize="12sp" />


        <Button
            android:id="@+id/btn_return"
            android:layout_width="250dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="@color/theme_1"
            android:text="@string/lesson_appointment_successful_return"
            android:textColor="@color/white" />


    </LinearLayout>
</LinearLayout>
