<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:descendantFocusability="beforeDescendants">


    <SurfaceView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/iv_thumb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        android:scaleType="fitCenter" />


    <RelativeLayout
        android:id="@+id/rl_player_controller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_progress">

        <LinearLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:text="00:00"
                android:textColor="#ffffff" />

            <SeekBar
                android:id="@+id/bottom_seek_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.0"
                android:background="@null"
                android:max="100"
                android:maxHeight="1dp"
                android:minHeight="1dp"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:paddingBottom="8dp"
                android:progressDrawable="@drawable/jz_bottom_seek_progress"
                android:thumb="@drawable/jz_seek_thumb_normal" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textColor="#ffffff" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_dm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingLeft="20dp"
                android:text="弹幕"
                android:textAlignment="center"
                android:textColor="#ffffff" />

            <ImageView
                android:id="@+id/iv_fullscreen"
                android:layout_width="52.5dp"
                android:layout_height="fill_parent"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:scaleType="centerInside"
                android:src="@drawable/jz_enlarge" />
        </LinearLayout>

        <ImageView
            android:id="@+id/back_tiny"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/jz_click_back_tiny_selector"
            android:visibility="gone" />

        <!--android:background="@drawable/jz_title_bg"-->
        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="23dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:scaleType="centerInside"
                android:src="@drawable/jz_back_normal" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toEndOf="@+id/iv_back"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="#ffffff"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/iv_player_share"
                android:layout_width="23dp"
                android:visibility="gone"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_share" />

            <LinearLayout
                android:id="@+id/battery_time_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/battery_level"
                    android:layout_width="23dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/tv_current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="#ffffffff"
                    android:textSize="12.0sp" />
            </LinearLayout>
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/loading_view"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminateDrawable="@drawable/jz_loading"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/start_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_start"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/jz_click_play_selector" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_replay_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/start_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/replay"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/retry_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_loading_faild"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/retry_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/retry_bg"
                android:paddingLeft="9dp"
                android:paddingTop="4dp"
                android:paddingRight="9dp"
                android:paddingBottom="4dp"
                android:text="@string/click_to_restart"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_barrage_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_barrage_layout"
            android:clickable="true"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <com.idyoga.yoga.view.CustomSeekBar
                android:id="@+id/sb_horizontal_view"
                style="@style/PlayerSeekStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_duration_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="0:00/0:00"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/iv_barrage_switch"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toEndOf="@+id/tv_duration_current"
                    android:background="@null"
                    android:checked="true"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:visibility="gone"
                    android:src="@drawable/btn_dm_on" />

                <RelativeLayout
                    android:visibility="gone"
                    android:id="@+id/rl_barrage_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:layout_toEndOf="@+id/iv_barrage_switch"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_barrage_send"
                        android:layout_width="56dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/bg_barrage_send"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="发布"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <EditText
                        android:visibility="gone"
                        android:id="@+id/et_barrage_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_toStartOf="@id/tv_barrage_send"
                        android:background="@drawable/a_6"
                        android:hint="发个弹幕吧"
                        android:imeOptions="flagNoExtractUi"
                        android:maxLines="3"
                        android:minHeight="35dp"
                        android:minLines="1"
                        android:inputType="text"
                        android:paddingLeft="5dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/bottom_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_alignParentBottom="true"
        android:max="100"
        android:progressDrawable="@drawable/jz_bottom_progress" />

    <!--<com.idyoga.common.barrage.BarrageContainerView
        android:id="@+id/barrage_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp" />-->

</RelativeLayout>
